<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              tools:context=".View.RegisterResultFragment"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:clipChildren="false"
              android:clipToPadding="false"
              android:orientation="vertical"
              android:padding="24dp"
              android:paddingTop="16dp"
              android:background="@drawable/blur89">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp">
        <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp"
                app:srcCompat="@drawable/logoorange"
                android:contentDescription="@string/imageView_content_desc"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textSize="16sp"
                android:textColor="@color/primaryTextColor"
                android:fontFamily="@font/audiowide"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/remind_password"
                android:textSize="28sp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textAllCaps="true"/>

    </LinearLayout>


    <TextView
            android:id="@+id/remindpassword_textView"
            android:text="@string/remindpassword_text"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12sp"
            android:layout_marginBottom="32dp"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:layout_height="wrap_content">

    </TextView>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            app:errorEnabled="true">

        <EditText
                android:id="@+id/remindpassword_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox.Dense"
                android:textColor="@color/secondaryLightColor"
                android:inputType="textEmailAddress"
                android:textAllCaps="true"/>
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="12dp"
            android:gravity="center_horizontal|center_vertical"
            android:layout_gravity="bottom">

        <Button
                android:id="@+id/back_to_login_button"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                style="android.support.design.button.MaterialButton"
                android:text="@string/button_ok"
                android:textAllCaps="true"
        />
    </RelativeLayout>


</LinearLayout>